CIV-16779 changes